Stop article width collapsing

--- a/app/styles/article.less
+++ b/app/styles/article.less
@@ -1,14 +1,23 @@
+@articleWidth: 260px;
+@articleHeight: 340px;
+@articleMargin: 32px;
+@numArticles: 4;
+
 .Articles {
   display: flex;
+  justify-content: center;
+  width: @numArticles * @articleWidth + (@numArticles - 1) * @articleMargin;
 }
 
 .Article {
-  height: 340px;
-  margin: 0 2rem 2rem 0;
-  position: relative;
-  width: 260px;
-  overflow: hidden;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+  animation-name: appear;
+  flex: 0 0 @articleWidth;
+  height: @articleHeight;
+  margin: 0 @articleMargin @articleMargin 0;
   opacity: 0;
+  position: relative;
 
   &-content {
     padding: 1rem;
@@ -97,12 +106,6 @@
   }
 }
 
-.Article {
-  animation-duration: .5s;
-  animation-name: appear;
-  animation-fill-mode: forwards;
-}
-
 .Article:nth-of-type(1) {
   animation-delay: 0.1s;
 }
@@ -134,5 +137,3 @@
     transform: translate3d(0, 0, 0);
   }
 }
-
-
