--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -18,8 +18,6 @@ body {
   font-size: 14px;
   font-weight: 600;
   line-height: 1.5;
-  min-height: 100vh;
-  overflow: hidden;
 }
 
 main {
